k8s/dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: companyhubfrontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: companyhubfrontend
  template:
    metadata:
      labels:
        app: companyhubfrontend
    spec:
      containers:
        - name: companyhubfrontend
          image: 'gcr.io/airy-cortex-291920/frontend:68138ae'
          ports:
            - containerPort: 8080
      restartPolicy: OnFailure
