k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
    name: companyhub-service
    labels:
      app: companyhubfrontend
spec:
    type: NodePort
    ports:
        - protocol: TCP
          name: http-svc
          port: 80
          targetPort: 8080
    selector:
        app: companyhubfrontend
